Visible functionality for menu items fixed

--- a/assets/css/erm-admin-style.css
+++ b/assets/css/erm-admin-style.css
@@ -64,7 +64,8 @@
     padding: 25px 0px;
 }
 .erm_menu_item .edit-icons {
-    display: inline-block;
+    display: block;
+    text-align: right;
     font-size: 20px;
 }
 .erm_menu_item .edit-icons .fa {
